add Product completed

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -276,4 +276,5 @@ function validateAndSubmit() {
     }
 
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
 <%- include("../../views/partials/admin/footer") %>
